app/styles/file.scss
.file {
  padding: 10px;

  .meta {
    margin: 1em 0;

    .filename {
      a {
        color: #222;
        text-decoration: none;
      }

      font-size: 1.8em;
      line-height: 1em;
      margin-bottom: 0.3em;
      font-weight: bold;
      word-wrap: break-word;
    }

    .fsinfo {
      font-size: 1.1em;
      line-height: 1.6;
    }

    .size {
      font-weight: bold;
    }

    .download {
      margin-top: 2em;
    }
  }

  .preview {
    text-align: center;

    audio, .no-preview {
      width: 100%;
      font-size: 3em;
      color: #CCC;
      font-weight: bold;
      text-align: center;
    }

    img {
      max-width: 100%;
      max-height: 1200px;
      margin: auto 0;
    }

    video {
      max-width: 100%;
      margin: auto;
    }

    iframe, object {
      width: 100%;
      align-self: stretch;
      background-color: #FFF;
      border: 0;
    }

    .markdown {
      margin-top: 1em;
      border-top: 3px solid #DDD;
      background-color: #FFF;
      max-width: 900px;

      .inner {
        padding: 10px;
      }
    }
  }
}

@media (max-width: 550px) {
  .file {
    .meta {
      .filename {
        font-size: 1.3em;
      }
    }
  }
}

.pswp__zoom-wrap {
  will-change: auto !important;
  -webkit-backface-visibility: visible !important;
}

